<resources>
    <string name="app_name">Usere_Registration</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_user_name">user name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="fullname">fullName</string>
    <string name="mobile">mobile</string>
    <string name="about">I`m Animaw Yitayal. I study Software Engineering at Bit. You can contact me through anex518@gmail.com, or using my phone number 09 19 60 71 01 or 09 28 57 75 62</string>
    <string name="todo">TODO</string>
</resources>
