<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true"
        android:background="@color/colorAccent"
       >
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvFname"
                android:text="@string/fullname"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvuUName"
                android:text="@string/prompt_user_name"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFname"/>
            <TextView
                android:id="@+id/tvpassword"
                android:text="password"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvuUName"/>
            <TextView
                android:id="@+id/tvEmail"
                android:text="@string/email"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvpassword"/>

            <TextView
                android:id="@+id/tvPhone"
                android:text="@string/mobile"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"/>
            <TextView
                android:id="@+id/tvGender"
                android:text="gender"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>